{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "OnFoot",
            "id": "3403dbb6-8ab4-4c7c-b3ba-39518e7a9696",
            "actions": [
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "eb8daf23-d548-4be8-99fa-f7fa7bb218e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "79e061ce-1323-4c3a-8a65-6a88e4f0c042",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "04469aa6-28d0-4465-be25-0bee57a706bd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "fe8d09a9-0608-4e39-a8f1-60e5efa01817",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "d8a914a5-e587-4dcd-b2fc-f3c67d7b7215",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3455434f-acdb-4de2-972e-955e81662893",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ac05720-bbd2-4f5b-929d-e7be407e5fe6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ab013ae-284e-427e-a827-3515ec4e0020",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "241834ab-30e1-4f0a-b21a-7fecd4719e28",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3523b5b9-be8b-49f6-a7e1-e69ec9974f3e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "JumpRoll",
            "id": "9bfdf636-705f-4d85-93e4-a2ba7ce8d53a",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0e02add1-f3db-4de1-b5b7-1eb2e9d196ff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "099dc59a-9293-46e7-8247-063a3ceb3b21",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "450894be-b1cc-4360-bc9d-aeee1afcb25c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33d6dc51-8ac9-44d3-b2f9-f3ec2118970e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KB",
            "bindingGroup": "KB",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}